# WVS-1.01

./: .env.example  .gitignore  README.md  cli_to_web_memory.json  description.txt  large_scale_vulnerability_scanner.py  local_model.py  readme.md  requirements.txt  run_.ps1  run_venomai.cmd  scanner_config.yaml  start.bat  vulnerability_analyzer.py  web_app.py
backend/: pyproject.toml
backend/app/: config.py  main.py  models.py  schemas.py
backend/app/routers/: chat.py  findings.py  pr.py  rectify.py  scans.py
backend/app/sast/: __init__.py  base.py  cli.py  diff_engine.py  normalize.py  reporter.py
backend/app/scanner/: a01_broken_access.py  a02_crypto_failures.py  a03_injection.py  a04_insecure_design.py  a05_security_misconfig.py  a06_vulnerable_components.py  a07_auth_failures.py  a08_integrity_failures.py  a09_logging_monitoring.py  a10_ssrf.py  base.py  http_client.py  severity.py
backend/app/services/: chat_service.py  github_client.py  local_repo.py  pr_ingest.py  rectify_service.py  scan_orchestrator.py
backend/app/websocket/: scan_progress.py
backend/semgrep_fixtures/: safe_python.py  safe_tsx.tsx  unsafe_python.py  unsafe_tsx.tsx
backend/tests/: test_findings_export.py  test_local_repo.py  test_rectify_service.py
backend/tests/sast/: test_cli_compare.py  test_cli_scan_scope.py  test_diff_engine.py  test_normalize.py  test_semgrep_fixtures.py
details/: 00_presentation_plan.md  01_algorithmic_thinking_dsa.md  02_architecture_and_technical_decisions.md  03_security_considerations.md  04_development_challenges.md  05_qna_prep.md  (+1 more)
(+73 files in other folders)
